# VoyageAgent

./: .gitignore  README.md  start_servers.bat  trippilot.db
backend/: main.py  pyproject.toml  requirements.txt  trippilot.db
backend/agents/: advisor.py  attraction.py  budget.py  expense.py  graph.py  hotel.py  itinerary.py  llm_config.py  state.py
backend/database/: database.py  models.py  schemas.py
backend/routes/: auth.py  destinations.py  trips.py  users.py
backend/services/: auth_service.py  destination_service.py
frontend/: api.js  app.js  auth.js  create-trip.html  dashboard.html  index.html  login.html  notifications.html  profile.html  results.html  saved-plans.html  script.js  settings.html  style.css  tailwind.config.ts
