[tool.poetry]
name = "trippilot-backend"
version = "0.1.0"
description = "Backend for TripPilot AI Travel Planning Assistant"
authors = ["Urvashi  <urvashiparmar1603@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.0"
uvicorn = "0.30.6"
sqlalchemy = "2.0.35"
psycopg2-binary = "2.9.9"
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
langchain = "0.3.0"
langchain-core = "0.3.0"
langchain-google-genai = "2.0.1"
langgraph = "0.2.22"
chromadb = "0.5.11"
python-multipart = "0.0.12"
alembic = "1.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
